--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@page
 <div class="container">
     <div class="row p-1">
+        <div class="col-1"><label id="labelUser">Hi</label></div>
+    </div>
+    <div class="row p-1">
         <div class="col-1">User</div>
         <div class="col-5"><input type="text" id="userInput" /></div>
     </div>
@@ -10,7 +13,7 @@
     </div>
     <div class="row p-1">
         <div class="col-6 text-end">
-            <input type="button" id="sendButton" value="Send Message" />
+            <input type="button" id="sendButton" value="Send Message" disabled="true"/>
         </div>
     </div>
     <div class="row p-1">
