started integrating new ui into BL

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="container1">
           <img src="user1.png" class="msgimg" />
           <div class="active">
-            <p>User name</p>
+            <p id="pUser">User name</p>
           </div>
         </div>
       </div>
@@ -16,13 +16,10 @@
         <div class="msg-inbox">
           <div class="chats">
             <!-- Message container -->
-            <div class="msg-page">
+            <div id ="msgPage" class="msg-page">
               <!-- Incoming messages -->
 
               <div class="received-chats">
-                <div class="received-chats-img">
-                  <img src="user2.png" />
-                </div>
                 <div class="received-msg">
                   <div class="received-msg-inbox">
                     <p>
@@ -32,34 +29,25 @@
                       commodi modi voluptatibus iusto omnis harum illum iste
                       distinctio expedita illo!
                     </p>
-                    <span class="time">18:06 PM | July 24</span>
                   </div>
                 </div>
               </div>
               <!-- Outgoing messages -->
               <div class="outgoing-chats">
-                <div class="outgoing-chats-img">
-                  <img src="user1.png" />
-                </div>
                 <div class="outgoing-msg">
                   <div class="outgoing-chats-msg">
-                    <p class="multi-msg">
+                    <p>
                       Hi riya , Lorem ipsum dolor sit amet consectetur
                       adipisicing elit. Illo nobis deleniti earum magni
                       recusandae assumenda.
                     </p>
-                    <p class="multi-msg">
+                    <p>
                       Lorem ipsum dolor sit amet consectetur.
                     </p>
-
-                    <span class="time">18:30 PM | July 24</span>
                   </div>
                 </div>
               </div>
               <div class="received-chats">
-                <div class="received-chats-img">
-                  <img src="user2.png" />
-                </div>
                 <div class="received-msg">
                   <div class="received-msg-inbox">
                     <p class="single-msg">
@@ -67,22 +55,16 @@
                       sit amet consectetur adipisicing elit. iste distinctio
                       expedita illo!
                     </p>
-                    <span class="time">18:31 PM | July 24</span>
                   </div>
                 </div>
               </div>
               <div class="outgoing-chats">
-                <div class="outgoing-chats-img">
-                  <img src="user1.png" />
-                </div>
                 <div class="outgoing-msg">
-                  <div class="outgoing-chats-msg">
+                  <div>
                     <p>
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Velit, sequi.
                     </p>
-
-                    <span class="time">18:34 PM | July 24</span>
                   </div>
                 </div>
               </div>
@@ -94,6 +76,7 @@
           <div class="msg-bottom">
             <div class="input-group">
               <input
+                id="userInput"
                 type="text"
                 class="form-control"
                 placeholder="Write message..."
