started rework: improved user registration + render chatbox foreach registered user + bug fixed

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,23 +12,8 @@
 
       <!-- Chat inbox  -->
       <div class="chat-page">
-        <div class="msg-inbox">
-          <div class="chats">
-            <div id ="msgPage" class="msg-page">
-            </div>
-          </div>
-          <div class="msg-bottom">
-            <div class="input-group">
-              <input
-                id="userInput"
-                type="text"
-                class="form-control"
-                placeholder="Write message..."
-              />
-              <span class="input-group-text send-icon">
-                <i class="bi bi-send"></i>
-              </span>
-            </div>
+        <div id ="msgInbox" class="msg-inbox">
+          
           </div>
         </div>
       </div>
