--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -19,4 +19,7 @@
       </div>
     </div>
 <script src="~/lib/signalr/signalr.js"></script>
-<script src="~/js/chat.js"></script>
+<script src="~/js/renderUi.js"></script>
+<script src="~/js/connection.js"></script>
+
+<script src="~/js/app.js"></script>
