started working on navigation

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,14 +12,14 @@
 
       <!-- Chat inbox  -->
       <div class="chat-page">
+        <ul id="nav" class = "topnav">
+        </ul>
         <div id ="msgInbox" class="msg-inbox">
-          
-          </div>
+        </div>
         </div>
       </div>
     </div>
 <script src="~/lib/signalr/signalr.js"></script>
 <script src="~/js/renderUi.js"></script>
 <script src="~/js/connection.js"></script>
-
 <script src="~/js/app.js"></script>
