--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -207,6 +207,18 @@ received-chats-img {
     padding: 1rem;
     box-shadow: rgb(0 0 0 / 25%) 0px 2px 5px 2px;
 }
+
+.single-msg  {
+    position: relative;
+}
+
+.single-msg.received::after  {
+    content:"✔";
+    position: absolute;
+    top: 4px;
+    right: 4px;
+}
+
 .outgoing-chats-msg {
         float: right;
         width: 46%;
