--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -213,7 +213,7 @@ received-chats-img {
 }
 
 .single-msg.received::after  {
-    content:"✔";
+    content:"read";
     position: absolute;
     top: 4px;
     right: 4px;
