--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -13,12 +13,6 @@
     height: 80%;
 }
 
-img {
-    width: 50px;
-    vertical-align: middle;
-    border-style: none;
-    border-radius: 100%;
-}
 /* Styling the msg-header container */
 .msg-header {
     border: 1px solid #ccc;
@@ -152,13 +146,6 @@ img {
         font-weight: bold !important;
     }
 
-/* Styling the avatar  */
-received-chats-img {
-    display: inline-block;
-    width: 50px;
-    float: left;
-}
-
 .received-msg {
     display: inline-block;
     padding: 0 0 0 10px;
@@ -183,13 +170,6 @@ received-chats-img {
     overflow-wrap: break-word;
 }
 
-/* Styling the msg-sent time  */
-.time {
-    color: #777;
-    display: block;
-    font-size: 12px;
-    margin: 8px 0 0;
-}
 .outgoing-chats {
     overflow: hidden;
     margin: 26px 20px;
@@ -197,7 +177,7 @@ received-chats-img {
 
 .outgoing-chats-msg p {
     background-color: #3a12ff;
-    background-image: linear-gradient(45deg, #ee087f 0%, #DD2A7B 25%, #9858ac 50%, #8134AF 75%, #515BD4 100%);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 0, 0.5), rgba(0, 0, 255, 0.5));
     color: #fff;
     border-radius: 10px;
     font-size: 14px;
@@ -224,13 +204,6 @@ received-chats-img {
         width: 46%;
     }
 
-/* Styling the avatar */
-.outgoing-chats-img {
-    display: inline-block;
-    width: 50px;
-    float: right;
-    margin-right: 1rem;
-}
 @media only screen and (max-device-width: 850px) {
     *,
     .time {
